update to bread photo

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-tutorial-site",
+  "name": "yun-app01",
   "version": "1.0.0",
   "private": true,
-  "description": "gatsby-tutorial-site",
+  "description": "yun-app01",
   "author": "joe62",
   "keywords": [
     "gatsby"
