--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@deckdeckgo/highlight-code": "^4.4.0",
+    "@gatsbyjs/reach-router": "^2.0.1",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mdx-js/react": "^2.3.0",
     "autoprefixer": "^10.4.14",
     "gatsby": "^5.11.0",
@@ -25,13 +28,20 @@
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-remark-code-buttons": "^2.0.7",
     "gatsby-remark-prismjs": "^7.11.0",
     "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-json": "^5.12.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "postcss": "^8.4.27",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6"
   }
 }
